# loom

./: .gitignore  LICENSE  README.md  README.zh-CN.md  action.yml  pyproject.toml  session.loom.json.wirelog
.github/workflows/: agent-ci.yml  ci.yml
docs/: action-schema.md  bench-task-schema.md  events-schema.md  policy-schema.md  release-checklist.md  threat-model.md  trace-format.md
docs/demo/: demo.tape  demo_agent.py  record.py  rewind.py
examples/: 01_hello.py  02_record_replay_fork_bisect.py  03_live_anthropic.py  04_subagents.py  05_sweep_diff.py  06_conversation.py  07_human_in_the_loop.py  08_checkup_heal.py  09_durable_runs.py  10_policy.py  11_structured_output.py  12_impact.py  README.md  _shared.py  browser_agent.py  coding_agent.py  live_demo.py  sql_agent.py  support_agent.py
examples/bench/: fix-tests.yaml
examples/ci/: agent.py
examples/docker-sandbox/: README.md  compose.yml
examples/flight-recorder/: README.md  agent.py  agent_v2.py  demo.sh  demo.tape  fake_model.py  sneaky_client.py
examples/incidents/: README.md  generate.py
loom/: __init__.py  __main__.py  action.py  agent.py  alert.py  ambient.py  artifacts.py  assertions.py  autopilot.py  autopsy.py  behavior.py  bench.py  breakpoint.py  cache.py  canary.py  capabilities.py  cli.py  context.py  contract.py  cost.py  dataset.py  debugger.py  demo.py  diagnose.py  diff.py  effect.py  events.py  experiment.py  export.py  fix.py  fuzz.py  harden.py  health.py  impact.py  incident.py  inject.py  insight.py  intent.py  journal.py  judge.py  (+43 more)
tests/: conftest.py  test_action.py  test_action_search.py  test_agent.py  test_agent_resilience.py  test_ai_smart.py  test_alert.py  test_all_frameworks_functions.py  test_ambient.py  test_anthropic_translation.py  test_artifacts.py  test_assertions.py  test_audit_sbom_dlproom.py  test_autopilot.py  test_autopsy.py  test_bench.py  test_bisect.py  test_cache.py  test_cache_rerun_edit.py  test_canary.py  test_capabilities.py  test_causal.py  test_cli_errors.py  test_cli_record_heal_skills.py  test_cli_test_watch.py  test_cli_trust_why.py  test_context.py  test_contract.py  test_conversation.py  test_cost.py  test_critic.py  test_cross_dialect_reconstruction.py  test_dataset.py  test_debugger.py  test_debugger_pro.py  test_demo.py  test_diagnose.py  test_diff.py  test_dlp_semantic.py  test_doctor.py  (+84 more)
(+32 files in other folders)
