[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loom-agent"
version = "0.6.0"
description = "The agent harness you can read, replay, and rewind."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "evanl666" }]
keywords = ["agent", "llm", "harness", "ai", "replay", "anthropic", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
dev = ["pytest>=8", "anthropic>=0.40", "openai>=1.0"]

[project.scripts]
loom = "loom.cli:main"

[project.urls]
Homepage = "https://github.com/evanl666/loom"
Repository = "https://github.com/evanl666/loom"

[tool.hatch.build.targets.wheel]
packages = ["loom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
