[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loom-harness"
version = "0.31.3"
description = "The black-box debugger for tool-using AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "evanl666" }]
keywords = ["agent", "llm", "harness", "ai", "replay", "anthropic", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
mcp = ["mcp>=1.0"]
yaml = ["pyyaml>=6"]  # optional: full YAML for policy files (a bounded parser ships built in)
dev = ["pytest>=8", "anthropic>=0.40", "openai>=1.0", "mcp>=1.0", "pyyaml>=6"]

[project.scripts]
loom = "loom.cli:main"

[project.urls]
Homepage = "https://github.com/evanl666/loom"
Repository = "https://github.com/evanl666/loom"

[tool.hatch.build.targets.wheel]
packages = ["loom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
